[package]
name = "eff-wordlist"
version = "1.0.3"
authors = ["Cyryl Płotnicki <cyplo@cyplo.net>"]
edition = "2018"
description= "Rust crate packaging EFF wordlist"
readme = "README.md"
repository = "https://github.com/cyplo/eff-wordlist-rs"
license = "AGPL-3.0"
documentation = "https://docs.rs/eff-wordlist/"

[dependencies]
rand = "0.8"
